--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,193 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Zen+Tokyo+Zoo&display=swap');
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+    font: message-box;
+    background-color: rgb(201, 201, 201);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.weatherCard.maastricht{
+    background-color: slategray;
+    text-align: center;
+    margin: 0 auto;
+    border-radius: 1em;
+    padding-top: 1vh;
+    width: 300px;
+    height: 475px;
+    margin-top: 3vh;
+    background-image: url(./images/maastricht.jpeg);
+    box-shadow: black 2px  2px 10px;
+    margin-left: 2vw;
+    margin-right: 2vw;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.weatherCard.marseille{
+    background-color: slategray;
+    text-align: center;
+    margin: 0 auto;
+    border-radius: 1em;
+    padding-top: 1vh;
+    width: 300px;
+    height: 475px;
+    margin-top: 3vh;
+    background-image: url(./images/marseille.jpeg);
+    background-position: top;
+    background-size: 101%;
+    box-shadow: black 2px  2px 10px;
+    margin-left: 2vw;
+    margin-right: 2vw;
 }
+h1{
+    height: 127.88px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-.App-link {
-  color: #61dafb;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.icon{
+    position: relative;
+    padding: 0;
+    top: -50px;
+}
+.mainTemperature{
+    position: relative;
+    font-size: 30px;
+    font-weight: bold;
+    margin: 0 auto;
+    color: rgb(51, 58, 65);
+}
+h1{
+    padding-bottom: 1vh;
+    font-family: 'Dancing Script', cursive;
+    font-weight: bolder;
+    font-size: 50px;
+    text-align: center;
+    color: rgb(32, 36, 41);
+}
+.weatherInfo{
+    background-color: rgba(0, 0, 0, 0.5);
+    position: relative;
+    width: 220px;
+    margin: 0 auto;
+    color: white;
+    border-radius: 10px;
+    /* padding-top: 5px;
+    padding-bottom: 5px; */
+    line-height: 200%;
+    bottom: 90px;
+}
+.time{
+    position: relative;
+    font-size: 10px;
+    margin-top: -2px;
+    padding-bottom: 10px;
+    color: rgb(51, 58, 65);
+}
+.date{
+    position: relative;
+    font-weight: bold;
+    color: rgb(51, 58, 65);
+}
+.mainInfo{
+    background-color: rgba(255, 255, 255, 0.5);
+    width: 220px;
+    border-radius: 10px;
+    margin: 0 auto;
+    margin-bottom: 5px;
+}
+.accordion-wrapper{
+    display: flex;
+    width: 300px;
+    height: 470px;
+    justify-content: center;
+    align-items: center;
+    margin-top: 3vh;
+    margin-left: 2vw;
+    margin-right: 2vw;
+}
+.accordion.maastricht{
+    background-image: linear-gradient(rgb(80, 164, 189), rgb(40, 105, 124));
+    text-align: center;
+    margin: 0 auto;
+    border-radius: 1em;
+    width: 300px;
+    height: 470px;
+    overflow: hidden;
+    box-shadow: black 2px  2px 10px;
+}
+.accordion.marseille{
+    background-image: linear-gradient(rgb(137, 192, 230), rgb(196, 190, 173));
+    text-align: center;
+    margin: 0 auto;
+    border-radius: 1em;
+    width: 300px;
+    height: 470px;
+    overflow: hidden;
+    box-shadow: black 2px  2px 10px;
+}
+.accordion-item{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+    border-bottom: white 1px solid;
+    position: relative;
+    top: 15px;
+}
+.accordion-title{
+    display: flex;
+    width: 90%;
+    justify-content: space-between;
+    align-items: center;
+    height: 50px;
+    cursor: pointer;
+    margin-left: 5%;
+}
+.accordion-content {
+    max-height: 0px;
+    overflow: hidden;
+    transition: all 300ms ease;
+}
+.accordion-content.open {
+    height: auto;
+    max-height: 70px;
+    display: flex;
+    transition: all 500ms ease-out;
+    padding-bottom: 5px;
+}
+.accordion-table{
+    width: 90%;
+    margin-left: 5%;
+}
+.backToFront{
+    background: none;
+    border: none;
+    margin-bottom: 1px;
+    height: 5px;
+    cursor: pointer;
+    padding: 0;
+    left: -75px;
+    position: relative;
+    top: -468px;
+    z-index: 9999;
+}
+.frontToBack{
+    background: none;
+    border: none;
+    margin-bottom: 1px;
+    height: 5px;
+    cursor: pointer;
+    padding: 0;
+    position: relative;
+    top: -28px;
+    z-index: 9999;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    height: 19px;
+    width: 220px;
+    border-radius: 1em;
+    font-weight: bold;
 }
